--- a/styles/global.css
+++ b/styles/global.css
@@ -4,62 +4,58 @@
   box-sizing: border-box;
 }
 
-
 :root {
+  /*Brand Colors*/
 
-    /*Brand Colors*/
+  --brand-light: #59b2ff;
+  --brand-mid: #3487cf;
+  --brand-dark: #1d6fb6;
 
-  --brand-light: #59B2FF;
-  --brand-mid: #3487CF;
-  --brand-dark: #1D6FB6;
+  /*Accent Colors*/
 
-    /*Accent Colors*/
-  
-  --purple: #B259FF;
-  --fuschia: #FF59F9;
-  --pink: #FF598B;
-  --orange: #FF8B59;
-  --yellow: #FFCD59;
-  --lime: #E1FF59;
-  --green: #59FF91;
-  --cyan: #59FFF9;
-  --navy: #6A59FF;
+  --purple: #b259ff;
+  --fuschia: #ff59f9;
+  --pink: #ff598b;
+  --orange: #ff8b59;
+  --yellow: #ffcd59;
+  --lime: #e1ff59;
+  --green: #59ff91;
+  --cyan: #59fff9;
+  --navy: #6a59ff;
 
-    /*Feedback Color*/
+  /*Feedback Color*/
 
-  --danger: #FF5959;
+  --danger: #ff5959;
 
-    /*Input Colors*/
-  
-  --input-base: #1C1F21;
-  --input-stroke: #363B40;
-  --input-placeholder:#869198;
+  /*Input Colors*/
 
-   /*Shape Colors*/
-  
+  --input-base: #1c1f21;
+  --input-stroke: #363b40;
+  --input-placeholder: #869198;
+
+  /*Shape Colors*/
+
   --shape-background: #131516;
   --shape-body: #212427;
-  --shape-button: #2D3136;
-  --shape-hover: #383D42;
+  --shape-button: #2d3136;
+  --shape-hover: #383d42;
 
-    /*Text Colors*/
+  /*Text Colors*/
 
-   --text-body: #C8CDD0;
-   --text-heading: #F9F9F9;
+  --text-body: #c8cdd0;
+  --text-heading: #f9f9f9;
 
-
-
-    /*Tipografia*/
+  /*Tipografia*/
 
   --font-family-lo: "Leckerli One", cursive;
   --logo: 400 2.5rem/100% var(--font-family-lo);
 
   --font-family-bl: "Baloo 2", sans-serif;
   --heading-md: 700 1.75rem/100% var(--font-family-bl);
-  --heading-sm: 700 1,125rem/100% var(--font-family-bl);
+  --heading-sm: 700 1, 125rem/100% var(--font-family-bl);
 
   --font-family-os: "Open Sans", sans-serif;
   --body-md: 500 1rem/100% var(--font-family-os);
-  --body-sm: 500 0,875rem/100% var(--font-family-os);
-  --body-xs: 500 0,75rem/100% var(--font-family-os);
+  --body-sm: 500 0, 875rem/100% var(--font-family-os);
+  --body-xs: 500 0, 75rem/100% var(--font-family-os);
 }
