ajustando background-image e espaços entre aside e main

--- a/styles/global.css
+++ b/styles/global.css
@@ -59,3 +59,8 @@
   --body-sm: 500 0, 875rem/100% var(--font-family-os);
   --body-xs: 500 0, 75rem/100% var(--font-family-os);
 }
+
+body {
+  overflow: hidden;
+  background-color: var();
+}
