--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,14 @@ main {
 }
 
 .main-brand {
+  padding: 5rem 8.125rem 5rem 8.125rem;
   height: 100vh;
   border-radius: 0.75rem;
   background-color: var(--shape-body);
+}
+
+h1 {
+    font: var(--heading-md);
+    color: var(--text-heading);
+    margin-bottom: 2.5rem;
 }
