--- a/styles/global.css
+++ b/styles/global.css
@@ -43,7 +43,7 @@
   /*Text Colors*/
 
   --text-body: #c8cdd0;
-  --text-heading: #f9f9f9;
+  --text-heading: #F9F9F9;
 
   /*Tipografia*/
 
@@ -56,7 +56,7 @@
 
   --font-family-os: "Open Sans", sans-serif;
   --body-md: 500 1rem/100% var(--font-family-os);
-  --body-sm: 500 0, 875rem/100% var(--font-family-os);
-  --body-xs: 500 0, 75rem/100% var(--font-family-os);
+  --body-sm: 500 0.875rem/100% var(--font-family-os);
+  --body-xs: 500 0.75rem/100% var(--font-family-os);
 }
 
