--- a/styles/forms.css
+++ b/styles/forms.css
@@ -1,4 +1,4 @@
-fieldset {
+fieldset.section-1 {
   display: flex;
   flex-direction: column;
   border: none;
@@ -40,7 +40,7 @@ input {
   width: 100%;
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 1px solid var(--input-stroke);
+  border: 0.063rem solid var(--input-stroke);
   font: var(--body-sm);
   color: var(--input-placeholder);
 
@@ -51,9 +51,14 @@ input {
 input:active,
 input:focus {
   border-radius: 0.5rem;
-  border: 1px solid var(--brand-light);
+  border: 0.063rem solid var(--brand-light);
   outline: none;
 
+  font: var(--body-sm);
+  color: var(--text-heading);
+}
+
+.input-wrapper:hover input::placeholder {
   font: var(--body-sm);
   color: var(--text-heading);
 }
@@ -73,5 +78,54 @@ input:focus {
     opacity: 0;
     width: 100%;
     height: 100%;
+  }
+}
+
+.selector-event {
+  display: flex;
+  padding: 0.25rem;
+  border: 0.063rem solid var(--input-stroke);
+  border-radius: 0.5rem;
+  background-color: var(--input-base);
+  width: 100%;
+}
+
+.option {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0.656rem 1.125rem 0.656rem 1.125rem;
+  width: 100%;
+
+  border-radius: 5px;
+  cursor: pointer;
+  gap: 0.5rem;
+}
+
+label.option {
+  margin-bottom: 0;
+  align-items: center;
+  text-align: center;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+.option:hover {
+  font: var(--body-sm);
+  color: var(--text-heading);
+
+  svg path {
+    fill: var(--brand-light);
+  }
+}
+
+input[type="radio"]:checked + .option {
+  background-color: var(--shape-hover);
+
+  svg path {
+    fill: var(--brand-light);
   }
 }
