--- a/styles/forms/section-1.css
+++ b/styles/forms/section-1.css
@@ -107,6 +107,9 @@ label.option {
   margin-bottom: 0;
   align-items: center;
   text-align: center;
+
+  font: var(--body-sm);
+  color: var(--input-placeholder);
 }
 
 input[type="radio"] {
