--- a/styles/index.css
+++ b/styles/index.css
@@ -2,4 +2,4 @@
 @import url(layout.css);
 @import url(aside.css);
 @import url(main.css);
-@import url(forms.css);
+@import url(../styles/forms/section-1.css);
