--- a/styles/form-section-1.css
+++ b/styles/form-section-1.css
@@ -2,7 +2,6 @@ fieldset.section-1 {
   display: flex;
   flex-direction: column;
   border: none;
-  margin-bottom: 2.5rem;
 }
 
 & legend {
@@ -66,7 +65,7 @@ input:focus {
 .flex-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1rem;
+  column-gap: 1rem;
 
   & input[type="datetime-local"] {
     position: relative;
@@ -88,6 +87,7 @@ input:focus {
   border-radius: 0.5rem;
   background-color: var(--input-base);
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 .option {
@@ -101,9 +101,10 @@ input:focus {
   border-radius: 5px;
   cursor: pointer;
   gap: 0.5rem;
+
 }
 
-label.option {
+& label.option {
   margin-bottom: 0;
   align-items: center;
   text-align: center;
@@ -116,7 +117,7 @@ input[type="radio"] {
   display: none;
 }
 
-.option:hover {
+& .option:hover {
   font: var(--body-sm);
   color: var(--text-heading);
 
@@ -131,4 +132,36 @@ input[type="radio"]:checked + .option {
   svg path {
     fill: var(--brand-light);
   }
+}
+
+textarea {
+  display: flex;
+  width: 100%;
+  height: 8.5rem;
+  margin-bottom: 3rem;
+
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 0.063rem solid var(--input-stroke);
+  background-color: var(--input-base);
+
+  font: var(--body-sm);
+  color: var(--input-placeholder);
+}
+
+& textarea:hover,
+textarea:active,
+textarea:focus {
+  border-radius: 0.5rem;
+  border: 0.063rem solid var(--brand-light);
+  outline: none;
+
+  font: var(--body-sm);
+  color: var(--text-heading);
+}
+
+& textarea:focus::placeholder,
+textarea:hover::placeholder {
+  font: var(--body-sm);
+  color: var(--text-heading);
 }
