--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
-@import url(global.css);
-@import url(layout.css);
-@import url(aside.css);
-@import url(main.css);
-@import url(../styles/forms/section-1.css);
+@import url(../styles/global.css);
+@import url(../styles/layout.css);
+@import url(../styles/aside.css);
+@import url(../styles/main.css);
+@import url(../styles/form-section-1.css);
