--- a/styles/forms/section-1.css
+++ b/styles/forms/section-1.css
@@ -1,4 +1,4 @@
-fieldset.section-1 {
+fieldset.information {
   display: flex;
   flex-direction: column;
   border: none;
@@ -13,7 +13,7 @@ fieldset.section-1 {
   padding-left: 2.25rem;
 }
 
-& legend::before {
+.img-sections {
   content: "";
   position: absolute;
   top: 50%;
@@ -21,20 +21,20 @@ fieldset.section-1 {
   transform: translateY(-50%);
   width: 1.5rem;
   height: 1.5rem;
-  background-image: url(../assets/icons/calendar.svg);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 label {
   display: block;
-  margin-bottom: 0.75rem;
+  /* margin-bottom: 0.75rem; */
   font: var(--body-sm);
   color: var(--text-body);
 }
 
 input {
   height: 3rem;
+  margin-top: 0.75rem;
   margin-bottom: 1rem;
   width: 100%;
   padding: 1rem;
@@ -87,6 +87,7 @@ input:focus {
   border-radius: 0.5rem;
   background-color: var(--input-base);
   width: 100%;
+  margin-top: 0.75rem;
   margin-bottom: 1rem;
 }
 
@@ -134,7 +135,7 @@ input[type="radio"]:checked + .option {
 }
 
 textarea {
-  display: flex;
+  display: block;
   width: 100%;
   height: 8.5rem;
   margin-bottom: 3rem;
@@ -146,7 +147,7 @@ textarea {
 
   font: var(--body-sm);
   color: var(--input-placeholder);
-  margin-bottom: 3rem;
+  margin-block: 0.75rem 3rem;
 }
 
 & textarea:hover,
