--- a/styles/index.css
+++ b/styles/index.css
@@ -2,4 +2,5 @@
 @import url(../styles/layout.css);
 @import url(../styles/aside.css);
 @import url(../styles/main.css);
-@import url(../styles/form-section-1.css);
+@import url(../styles/forms/section-1.css);
+@import url(../styles/forms/section-2.css);
