--- a/styles/forms/section-1.css
+++ b/styles/forms/section-1.css
@@ -64,6 +64,7 @@ input:focus {
 .flex-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   column-gap: 1rem;
 
   & input[type="datetime-local"] {
