--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 main {
   padding: 1.25rem 1.25rem 1.25rem 1.25rem;
+  max-width: 55rem;
   height: 100vh;
   overflow: auto;
 }
@@ -11,7 +12,7 @@ main {
 }
 
 h1 {
-    font: var(--heading-md);
-    color: var(--text-heading);
-    margin-bottom: 2.5rem;
+  font: var(--heading-md);
+  color: var(--text-heading);
+  margin-bottom: 2.5rem;
 }
