ajustado capos input (switck-button) e input (file)

--- a/styles/forms/section-1.css
+++ b/styles/forms/section-1.css
@@ -117,7 +117,8 @@ input[type="radio"] {
   display: none;
 }
 
-& .option:hover {
+& .option:hover,
+  .option:focus {
   font: var(--body-sm);
   color: var(--text-heading);
 
