--- a/styles/index.css
+++ b/styles/index.css
@@ -4,3 +4,4 @@
 @import url(../styles/main.css);
 @import url(../styles/forms/section-1.css);
 @import url(../styles/forms/section-2.css);
+@import url(../styles/forms/section-3.css);
