--- a/styles/forms/section-3.css
+++ b/styles/forms/section-3.css
@@ -15,7 +15,12 @@ fieldset.contact {
 
 .contact-wrapper {
     margin-bottom: 1rem;
+    
   }
+
+input.contacts {
+  margin-bottom: 0;
+}
 
 input.input-required {
   margin-bottom: 0.5rem;
