--- a/styles/index.css
+++ b/styles/index.css
@@ -5,3 +5,4 @@
 @import url(../styles/forms/section-1.css);
 @import url(../styles/forms/section-2.css);
 @import url(../styles/forms/section-3.css);
+@import url(../styles/forms/section-4.css);
