--- a/styles/forms/section-1.css
+++ b/styles/forms/section-1.css
@@ -99,7 +99,7 @@ input:focus {
   padding: 0.656rem 1.125rem 0.656rem 1.125rem;
   width: 100%;
 
-  border-radius: 5px;
+  border-radius: 0.313rem;
   cursor: pointer;
   gap: 0.5rem;
 }
