--- a/styles/forms/section-2.css
+++ b/styles/forms/section-2.css
@@ -52,7 +52,7 @@ fieldset.personalization {
 }
 
 & .color-style input[type="radio"]:checked {
-  outline: 2px solid var(--brand-light);
+  outline: 0.125rem solid var(--brand-light);
 }
 
 & .color-style input[id="color1"] {
@@ -117,7 +117,7 @@ fieldset.personalization {
       width: 8.475rem;
       background-color: var(--shape-button);
       border-radius: 0.5rem;
-      border: 1px solid var(--shape-button);
+      border: 0.063rem solid var(--shape-button);
       padding: 0.25rem;
 
       & img {
@@ -142,7 +142,7 @@ fieldset.personalization {
       }
 
       & input[type="radio"]:checked {
-        border: 1px solid var(--brand-light);
+        border: 0.063rem solid var(--brand-light);
         border-radius: 0.5rem;
       }
 
@@ -179,7 +179,7 @@ fieldset.personalization {
     width: 4rem;
     height: 2rem;
     background-color: var(--input-base);
-    border: 1px solid var(--input-stroke);
+    border: 0.063rem solid var(--input-stroke);
     border-radius: 1rem;
 
     cursor: pointer;
@@ -239,7 +239,7 @@ fieldset.personalization {
   .custom-file-upload {
     display: flex;
     position: relative;
-    border: 1px solid #ccc;
+    border: 0.063rem solid #ccc;
     padding: 0.656rem 0.75rem;
    
     background-color: var(--shape-button);
