--- a/styles/forms/section-4.css
+++ b/styles/forms/section-4.css
@@ -34,7 +34,7 @@ margin-bottom: 2.5rem;
   transform: translateY(-50%);
   width: 1.25rem;
   height: 1.25rem;
-  border: 1px solid var(--input-stroke);
+  border: 0.063rem solid var(--input-stroke);
   background-color: var(--input-base);
   border-radius: .25rem;
   margin-right: .75rem;
@@ -50,7 +50,7 @@ margin-bottom: 2.5rem;
   background-image: url(../../assets/icons/check.svg);
   background-size: 1.25rem 1.25rem;
   background-repeat: no-repeat;
-  border: 1px solid var(--brand-light);
+  border: 0.063rem solid var(--brand-light);
   border-radius: .25rem;
   
 }
@@ -77,7 +77,7 @@ a {
 
 .button-event {
   display: flex;
-  justify-content: flex-end; /* Alinha o botão à direita */
+  justify-content: flex-end;
 
   margin-top: 3rem;
 }
@@ -85,27 +85,26 @@ a {
 
 
  .btn {
-  
-  background-color: var(--brand-dark);
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 4px;
-  cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 8px;
+  
+  background-color: var(--brand-dark);
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.813rem 1.25rem;
+  gap: 0.5rem;
+
   transition: background-color 0.2s, transform 0.2s;
 
   font: var(--body-md);
   color: var(--text-heading);
+  cursor: pointer;
 }
 
 .icon {
-  width: 18px; /* Tamanho do ícone SVG */
-  height: 18px;
-  fill: #fff; /* Cor do ícone */
+  width: 1.25rem;
+  height: 1.25rem;
+  fill: var(--text-heading);
 }
 
 .btn:hover {
